# BigData-Visualization

./: .gitignore  LAVA_ BigData Vis.pptx  README.md  dependency_test.py  main.py  pyproject.toml  ~$LAVA_ BigData Vis.pptx
lava/: __init__.py
lava/engine/: __init__.py  bootstrap.py  cache.py  catalog.py  connection.py  ingestion.py  query.py  stats.py
lava/index/: __init__.py  bptree.py  builder.py  gridfile.py
lava/llm/: __init__.py  client.py  conversation.py  error_log.py  eval.py  history.py  parser.py  pipeline.py  prompt.py  schema.py  sql_gen.py
lava/viz/: __init__.py  app.py  datashader_render.py  reduction.py  renderer.py
logs/: pipeline_errors.jsonl  pipeline_runs.jsonl
sample_data/: generate_sales.py  generate_weather.py  sales.csv
sample_data/.parquet_cache/: test_bootstrap.parquet
scripts/: add_speaker_notes.py  build_presentation.py
tests/: conftest.py  test_bptree.py  test_cache.py  test_catalog.py  test_connection.py  test_gridfile.py  test_ingestion.py  test_integration.py  test_pipeline.py  test_query.py  test_renderer.py  test_sql_gen.py  test_vizspec.py
uploads/.parquet_cache/: weather_data.parquet
